--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,10 @@ allprojects {
     apply plugin: "io.spring.dependency-management"
     dependencyManagement {
         dependencies {
-            dependency "com.google.guava:guava:${Versions.guava}"
+            imports {
+                mavenBom("org.springframework.boot:spring-boot-dependencies:2.5.2")
+            }
+            dependency("com.google.guava:guava:${Versions.guava}")
         }
     }
 }
